--- a/.babelrc
+++ b/.babelrc
@@ -2,8 +2,9 @@
     "presets": [
         "@babel/preset-env"
     ],
+    // "sourceType": "unambiguous",
     "plugins": [
         "@babel/plugin-syntax-dynamic-import", // 用于设置import()
         "@babel/plugin-transform-runtime" // 异步函数 （async）时，出现regeneratorRuntime is not defined 错误
     ]
-} 
+}
